--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 ## Rosyverse
 
-Rosyverse is an evolving pre-CRAN set of packages maintained by Brandon Rose, MD, MPH. It is important to continue to run `Rosyverse::update_all()` while you are using this set of related packages. Please out if there are issues with installation, documentation, or packages.
+Rosyverse is an evolving pre-CRAN set of packages maintained by Brandon Rose, MD, MPH. It is important to continue to run `Rosyverse::update_all()` while you are using this set of related packages. Please reach out if there are issues with installation, documentation, or packages.
 
 ``` r
 # install remotes package if you don't have it
@@ -32,7 +32,7 @@ Rosyverse::update_all() # run update on all packages
 Rosyverse::load_all() #load all Rosyverse packages!
 ```
 
-If you have any issues above download the most recent version of R at RStudtio and update all packages in RStudio. See [thecodingdocs.com/r/getting-started](https://www.thecodingdocs.com/r/getting-started "R Getting Started").
+If you have any issues above download the most recent version of R at RStudio and update all packages in RStudio. See [thecodingdocs.com/r/getting-started](https://www.thecodingdocs.com/r/getting-started "R Getting Started").
 
 ## Rosyverse Installation
 
